Fix RenderBox::availableHeight to subtract scrollbars in the right places https://bugs.webkit.org/show_bug.cgi?id=96031

Reviewed by Tony Chang.

Source/WebCore:

This matches Firefox 15 and IE9 rendering for the two new tests.

Tests: fast/block/positioning/percent-top-left-on-relative-position.html
       fast/css/nested-percent-height-on-replaced.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computePercentageLogicalHeight):
Subtract scrollbars when recurring on percentage heights.
(WebCore::RenderBox::computeReplacedLogicalHeightUsing):
This is the wrong place to subtract scrollbars. availableLogicalHeight
should return a value that doesn't include scrollbars.
(WebCore::RenderBox::availableLogicalHeightUsing):
Subtract scrollbars from specified heights. Also, consolidate the code to
use computeContentLogicalHeightUsing. This makes percentage heights use
the right containingBlock in quirks mode and makes viewport percentage heights work.

LayoutTests:

* fast/block/positioning/percent-top-left-on-relative-position-expected.html: Added.
* fast/block/positioning/percent-top-left-on-relative-position.html: Added.
* fast/css/nested-percent-height-on-replaced-expected.txt: Added.
* fast/css/nested-percent-height-on-replaced.html: Added.
* platform/chromium-linux/fast/css/percent-top-value-with-relative-position-expected.png:
* platform/chromium-win/fast/css/percent-top-value-with-relative-position-expected.txt:
This is now correctly centering the 50%. It moved up 8px because that is half of the body's margin.
This matches other Firefox 15 and IE9.

Canonical link: https://commits.webkit.org/114016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127915 268f45cc-cd09-0410-ab3c-d52691b4dbfc